resolved footer bug

--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
       <input type="text" />
       <!-- <i class="fas fa-search search"></i> -->
       <div class="btn">
-        <button>Google Search</button>
-        <button>I'm feeling Lucky</button>
+        <a href="#">
+          <button>Google Search</button>
+        </a>
+        <a href="#">
+          <button>I'm feeling Lucky</button>
+        </a>
         <div class="lang">
           <p>
             Google offered in: <a href="#">Hausa</a>
